# tree-sitter-super_factory_manager

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  build.zig  build.zig.zon  flake.nix  go.mod  grammar.js  package-lock.json  package.json  pom.xml  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-super-factory-manager.pc.in
bindings/go/: binding.go  binding_test.go
bindings/java/main/io/github/treesitter/jtreesitter/superfactorymanager/: TreeSitterSuperFactoryManager.java
bindings/java/test/: TreeSitterSuperFactoryManagerTest.java
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_super_factory_manager/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSuperFactoryManager/: super_factory_manager.h
bindings/swift/TreeSitterSuperFactoryManagerTests/: TreeSitterSuperFactoryManagerTests.swift
bindings/zig/: root.zig  test.zig
examples/: 01-moveitems.sfm  test.sfm
src/: grammar.json  node-types.json  parser.c
