[package]
name = "tree-sitter-super-factory-manager"
description = "A Minecraft mod that adds a domain-specific language for logistics automation."
version = "0.1.0"
authors = ["amit maish"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "super-factory-manager"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-super_factory_manager"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.9"
